Properly document `PUT /circuit`
